# linear-regression

./: README.md  insurance.csv  insurance.r  pyproject.toml  regression.ipynb
images/: figu10png
